--- a/pages/detail-card.html
+++ b/pages/detail-card.html
@@ -25,16 +25,16 @@
                                 <a href="./catalog.html" class="menu-nav__link">Каталог</a>
                             </li>
                             <li class="menu-nav__item">
-                                <a href="" class="menu-nav__link">Бренды</a>
+                                <a href="./brands.html" class="menu-nav__link">Бренды</a>
                             </li>
                             <li class="menu-nav__item">
-                                <a href="" class="menu-nav__link">Лизинг</a>
+                                <a href="./leasing.html" class="menu-nav__link">Лизинг</a>
                             </li>
                             <li class="menu-nav__item">
-                                <a href="" class="menu-nav__link">О компании</a>
+                                <a href="./about.html" class="menu-nav__link">О компании</a>
                             </li>
                             <li class="menu-nav__item">
-                                <a href="" class="menu-nav__link">Контакты</a>
+                                <a href="./contacts.html" class="menu-nav__link">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -228,16 +228,16 @@
                             </div>
                         </li>
                         <li class="header-mobile__menu-item">
-                            <a href="" class="header-mobile__menu-item__link">Бренды</a>
+                            <a href="./brands.html" class="header-mobile__menu-item__link">Бренды</a>
                         </li>
                         <li class="header-mobile__menu-item">
-                            <a href="" class="header-mobile__menu-item__link">Лизинг</a>
+                            <a href="./leasing.html" class="header-mobile__menu-item__link">Лизинг</a>
                         </li>
                         <li class="header-mobile__menu-item">
-                            <a href="" class="header-mobile__menu-item__link">О компании</a>
+                            <a href="./about.html" class="header-mobile__menu-item__link">О компании</a>
                         </li>
                         <li class="header-mobile__menu-item">
-                            <a href="" class="header-mobile__menu-item__link">Контакты</a>
+                            <a href="./contacts.html" class="header-mobile__menu-item__link">Контакты</a>
                         </li>
                     </ul>
 
@@ -969,16 +969,16 @@
                                 <a href="./catalog.html" class="footer-menu__link">Каталог</a>
                             </li>
                             <li class="footer-menu__item">
-                                <a href="" class="footer-menu__link">Бренды</a>
+                                <a href="./brands.html" class="footer-menu__link">Бренды</a>
                             </li>
                             <li class="footer-menu__item">
-                                <a href="" class="footer-menu__link">Лизинг</a>
+                                <a href="./leasing.html" class="footer-menu__link">Лизинг</a>
                             </li>
                             <li class="footer-menu__item">
-                                <a href="" class="footer-menu__link">О компании</a>
+                                <a href="./about.html" class="footer-menu__link">О компании</a>
                             </li>
                             <li class="footer-menu__item">
-                                <a href="" class="footer-menu__link">Контакты</a>
+                                <a href="./contacts.html" class="footer-menu__link">Контакты</a>
                             </li>
                         </ul>
                         <div class="footer-grid footer-grid--top">
