compress img & add new styles

--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
                         </ul>
                     </div>
                     <div class="footer__right">
-                        <div class="tabs">
+                        <div class="tabs tabs--footer">
                             <ul class="tabs__list">
                                 <li class="active-tab">Офис</li>
                                 <li>База</li>
