--- a/pages/brands.html
+++ b/pages/brands.html
@@ -279,6 +279,20 @@
     </header>
 
     <main>
+        <!-- Хлебные крошки -->
+        <section class="breadcrumb-section">
+            <div class="container">
+                <ul class="breadcrumb">
+                    <li class="breadcrumb__item">
+                        <a href="../index.html" class="breadcrumb__item-link">Главная</a>
+                    </li>
+                    <li class="breadcrumb__item">
+                        <span class="breadcrumb__item-link breadcrumb__item-link--active">Бренды</span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <!-- Бренды -->
         <section class="brands-section">
             <div class="container">
@@ -553,7 +567,7 @@
                         </ul>
                     </div>
                     <div class="footer__right">
-                        <div class="tabs">
+                        <div class="tabs tabs--footer">
                             <ul class="tabs__list">
                                 <li class="active-tab">Офис</li>
                                 <li>База</li>
