--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -25,7 +25,7 @@
                                 <a href="./catalog.html" class="menu-nav__link">Каталог</a>
                             </li>
                             <li class="menu-nav__item">
-                                <a href="./brands.html" class="menu-nav__link menu-nav__link--active">Бренды</a>
+                                <a href="./brands.html" class="menu-nav__link">Бренды</a>
                             </li>
                             <li class="menu-nav__item">
                                 <a href="./leasing.html" class="menu-nav__link">Лизинг</a>
@@ -34,7 +34,7 @@
                                 <a href="./about.html" class="menu-nav__link">О компании</a>
                             </li>
                             <li class="menu-nav__item">
-                                <a href="#" class="menu-nav__link">Контакты</a>
+                                <a href="#" class="menu-nav__link menu-nav__link--active">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -279,6 +279,20 @@
     </header>
 
     <main>
+        <!-- Хлебные крошки -->
+        <section class="breadcrumb-section">
+            <div class="container">
+                <ul class="breadcrumb">
+                    <li class="breadcrumb__item">
+                        <a href="../index.html" class="breadcrumb__item-link">Главная</a>
+                    </li>
+                    <li class="breadcrumb__item">
+                        <span class="breadcrumb__item-link breadcrumb__item-link--active">Контакты</span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <!-- Контакты -->
         <section class="contacts-section">
             <div class="container">
