--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -376,6 +376,32 @@
                             </div>
                             <div class="filter__wrapper">
                                 <ul class="filter-category">
+                                    <li class="filter-category__list">
+                                        <div class="filter-category__top">
+                                            <span>Цена</span>
+                                        </div>
+                                        <div class="range">
+                                            <div class="range__slider">
+                                                <span class="range__selected"></span>
+                                            </div>
+                                            <div class="range__input">
+                                                <input type="range" class="min" min="0" max="1000" value="0" step="10">
+                                                <input type="range" class="max" min="0" max="1000" value="10000" step="10">
+                                            </div>
+                                            <div class="range__price">   
+                                                <div class="range__price-input">
+                                                    <span class="range__price-text">от</span>
+                                                    <input type="number" name="min" class="min" value="0">  
+                                                    <span class="range__price-currency">₽</span> 
+                                                </div>   
+                                                <div class="range__price-input">
+                                                    <span class="range__price-text">до</span>
+                                                    <input type="number" name="max" class="max" value="1000">  
+                                                    <span class="range__price-currency">₽</span>  
+                                                </div>  
+                                            </div>
+                                        </div> 
+                                    </li>
                                     <li class="filter-category__list open">
                                         <div class="filter-category__top">
                                             <span>Бренд</span>
@@ -419,7 +445,7 @@
                                         <div class="filter-category__description">
                                             <ul class="filter-properties">
                                                 <li class="filter-properties__list">
-                                                    <label class="custom-checkbox custom-checkbox">
+                                                    <label class="custom-checkbox">
                                                         <input type="checkbox" checked>
                                                         <span>Колесные</span>
                                                     </label>
@@ -495,6 +521,58 @@
                                                 </li>
                                             </ul>
                                         </div>
+                                    </li>
+                                    <li class="filter-category__list">
+                                        <div class="filter-category__top">
+                                            <span>Грузоподъёмность, в тоннах</span>
+                                        </div>
+                                        <div class="range">
+                                            <div class="range__slider">
+                                                <span class="range__selected"></span>
+                                            </div>
+                                            <div class="range__input">
+                                                <input type="range" class="min" min="1" max="16" value="0" step="1">
+                                                <input type="range" class="max" min="1" max="16" value="16" step="1">
+                                            </div>
+                                            <div class="range__price">   
+                                                <div class="range__price-input">
+                                                    <span class="range__price-text">от</span>
+                                                    <input type="number" name="min" class="min" value="1">  
+                                                    <span class="range__price-currency">₽</span> 
+                                                </div>   
+                                                <div class="range__price-input">
+                                                    <span class="range__price-text">до</span>
+                                                    <input type="number" name="max" class="max" value="16">  
+                                                    <span class="range__price-currency">₽</span>  
+                                                </div>  
+                                            </div>
+                                        </div> 
+                                    </li>
+                                    <li class="filter-category__list">
+                                        <div class="filter-category__top">
+                                            <span>Объём ковша, в кубах</span>
+                                        </div>
+                                        <div class="range">
+                                            <div class="range__slider">
+                                                <span class="range__selected"></span>
+                                            </div>
+                                            <div class="range__input">
+                                                <input type="range" class="min" min="1" max="16" value="0" step="1">
+                                                <input type="range" class="max" min="1" max="20" value="20" step="1">
+                                            </div>
+                                            <div class="range__price">   
+                                                <div class="range__price-input">
+                                                    <span class="range__price-text">от</span>
+                                                    <input type="number" name="min" class="min" value="1">  
+                                                    <span class="range__price-currency">₽</span> 
+                                                </div>   
+                                                <div class="range__price-input">
+                                                    <span class="range__price-text">до</span>
+                                                    <input type="number" name="max" class="max" value="20">  
+                                                    <span class="range__price-currency">₽</span>  
+                                                </div>  
+                                            </div>
+                                        </div> 
                                     </li>
                                     <li class="filter-category__list">
                                         <div class="filter-category__row">
@@ -1009,7 +1087,7 @@
                         </ul>
                     </div>
                     <div class="footer__right">
-                        <div class="tabs">
+                        <div class="tabs tabs--footer">
                             <ul class="tabs__list">
                                 <li class="active-tab">Офис</li>
                                 <li>База</li>
