--- a/pages/detail-card.html
+++ b/pages/detail-card.html
@@ -452,12 +452,7 @@
                             </div>
                         </div>
                         <div class="characteristics__bottom">
-                            <button class="characteristics__bottom-btn">
-                                Развернуть
-                                <svg width="19" height="12" viewBox="0 0 19 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M9.015 11.1375L18.03 2.1225L15.9105 0L9.015 6.9L2.121 0L0 2.121L9.015 11.1375Z" />
-                                </svg>
-                            </button>
+                            <button class="characteristics__bottom-btn">Развернуть</button>
                         </div>
                     </div>
                 </div>
@@ -537,11 +532,16 @@
         </section>
 
         <!-- Фотогалерея -->
-        <!-- <section class="gallery-section">
+        <section class="gallery-section">
             <div class="container">
                 <div class="gallery">
                     <h2 class="second-title second-title--md">ФОТОГАЛЕРЕЯ</h2>
                     <div class="gallery__wrapper">
+                        <div class="btn-without-container gallery-btn-prev">
+                            <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6.62216 14.1727C6.96519 14.519 7.52135 14.519 7.86438 14.1727C8.20741 13.8264 8.20741 13.2649 7.86438 12.9185L3.21522 8.22467L16.9054 8.22468C17.3905 8.22468 17.7838 7.82763 17.7838 7.33785C17.7838 6.84807 17.3905 6.45103 16.9054 6.45103L3.21522 6.45103L7.86438 1.75716C8.20741 1.41083 8.20741 0.849327 7.86438 0.503001C7.52135 0.156674 6.96519 0.156674 6.62216 0.503001L0.473516 6.71077C0.130489 7.0571 0.130489 7.6186 0.473516 7.96493L6.62216 14.1727Z" />
+                            </svg>
+                        </div>
                         <div class="swiper swiper-gallery">
                             <div class="swiper-wrapper swiper-gallery__wrapper">
                                 <div class="swiper-slide swiper-gallery__slide">
@@ -560,13 +560,28 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
+
+                            <div class="swiper-gallery__pagination swiper-pagination"></div>
+                            <div class="swiper-gallery__btn swiper-gallery__btn-prev">
+                                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.62253 14.1726C6.96556 14.5189 7.52172 14.5189 7.86475 14.1726C8.20777 13.8263 8.20777 13.2648 7.86475 12.9184L3.21558 8.22458L16.9058 8.22458C17.3909 8.22458 17.7842 7.82754 17.7842 7.33776C17.7842 6.84798 17.3909 6.45094 16.9058 6.45094L3.21558 6.45093L7.86475 1.75707C8.20777 1.41074 8.20777 0.849235 7.86475 0.502909C7.52172 0.156582 6.96556 0.156582 6.62253 0.502909L0.473883 6.71068C0.130855 7.05701 0.130855 7.61851 0.473883 7.96484L6.62253 14.1726Z" fill="#FF6F00" />
+                                </svg>
+                            </div>
+                            <div class="swiper-gallery__btn swiper-gallery__btn-next">
+                                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M11.3775 14.1726C11.0344 14.5189 10.4783 14.5189 10.1353 14.1726C9.79223 13.8263 9.79223 13.2648 10.1353 12.9184L14.7844 8.22458L1.0942 8.22458C0.609084 8.22458 0.21582 7.82754 0.21582 7.33776C0.21582 6.84798 0.609084 6.45094 1.0942 6.45094L14.7844 6.45093L10.1353 1.75707C9.79223 1.41074 9.79223 0.849235 10.1353 0.502909C10.4783 0.156582 11.0344 0.156582 11.3775 0.502909L17.5261 6.71068C17.8691 7.05701 17.8691 7.61851 17.5261 7.96484L11.3775 14.1726Z" fill="#FF6F00" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="btn-without-container gallery-btn-next">
+                            <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M11.3778 14.1727C11.0348 14.519 10.4786 14.519 10.1356 14.1727C9.79259 13.8264 9.79259 13.2649 10.1356 12.9185L14.7848 8.22467L1.09456 8.22468C0.60945 8.22468 0.216187 7.82763 0.216187 7.33785C0.216187 6.84807 0.60945 6.45103 1.09456 6.45103L14.7848 6.45103L10.1356 1.75716C9.79259 1.41083 9.79259 0.849327 10.1356 0.503001C10.4786 0.156674 11.0348 0.156674 11.3778 0.503001L17.5265 6.71077C17.8695 7.0571 17.8695 7.6186 17.5265 7.96493L11.3778 14.1727Z" />
+                            </svg>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- Отзывы -->
         <section class="review-section">
@@ -574,7 +589,7 @@
                 <div class="review">
                     <h2 class="review__title">оТзывы владельцев</h2>
                     <div class="review__container">
-                        <div class="btn-without-container btn-without-container-prev">
+                        <div class="btn-without-container review-btn-prev">
                             <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6.62216 14.1727C6.96519 14.519 7.52135 14.519 7.86438 14.1727C8.20741 13.8264 8.20741 13.2649 7.86438 12.9185L3.21522 8.22467L16.9054 8.22468C17.3905 8.22468 17.7838 7.82763 17.7838 7.33785C17.7838 6.84807 17.3905 6.45103 16.9054 6.45103L3.21522 6.45103L7.86438 1.75716C8.20741 1.41083 8.20741 0.849327 7.86438 0.503001C7.52135 0.156674 6.96519 0.156674 6.62216 0.503001L0.473516 6.71077C0.130489 7.0571 0.130489 7.6186 0.473516 7.96493L6.62216 14.1727Z" />
                             </svg>
@@ -645,7 +660,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="btn-without-container btn-without-container-next">
+                        <div class="btn-without-container review-btn-next">
                             <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M11.3778 14.1727C11.0348 14.519 10.4786 14.519 10.1356 14.1727C9.79259 13.8264 9.79259 13.2649 10.1356 12.9185L14.7848 8.22467L1.09456 8.22468C0.60945 8.22468 0.216187 7.82763 0.216187 7.33785C0.216187 6.84807 0.60945 6.45103 1.09456 6.45103L14.7848 6.45103L10.1356 1.75716C9.79259 1.41083 9.79259 0.849327 10.1356 0.503001C10.4786 0.156674 11.0348 0.156674 11.3778 0.503001L17.5265 6.71077C17.8695 7.0571 17.8695 7.6186 17.5265 7.96493L11.3778 14.1727Z" />
                             </svg>
@@ -1082,7 +1097,7 @@
                         </ul>
                     </div>
                     <div class="footer__right">
-                        <div class="tabs">
+                        <div class="tabs tabs--footer">
                             <ul class="tabs__list">
                                 <li class="active-tab">Офис</li>
                                 <li>База</li>
