--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -592,16 +592,25 @@
                                             </label>
                                         </div>
                                     </li>
-                                    <li class="filter-category__list">
-                                        <div class="filter-category__row">
-                                            <span>В лизинг</span>
-                                            <div class="toggle-radio">
-                                                <input type="radio" name="leasing" id="leasing-off" data-radio="off" checked>
-                                                <input type="radio" name="leasing" id="leasing-on" data-radio="on">
-                                                <label for="leasing-off" class="toggle-radio__label" data-radio="off"></label>
-                                                <label for="leasing-on" class="toggle-radio__label" data-radio="on"></label>
-                                            </div>
+                                    <li class="filter-category__list open">
+                                        <div class="filter-category__top">
+                                            <span>В наличии</span>
                                         </div>
+                                        <div class="filter-category__description">
+                                            <ul class="filter-properties">
+                                                <li class="filter-properties__list radio">
+                                                    <div class="filter-category__row">
+                                                        <span>В наличии</span>
+                                                        <div class="toggle-radio">
+                                                            <input type="radio" name="leasing" id="leasing-off" data-radio="off" checked>
+                                                            <input type="radio" name="leasing" id="leasing-on" data-radio="on">
+                                                            <label for="leasing-off" class="toggle-radio__label" data-radio="off"></label>
+                                                            <label for="leasing-on" class="toggle-radio__label" data-radio="on"></label>
+                                                        </div>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                        </div>  
                                     </li>
                                 </ul>
                             </div>
